<resources>
    <string name="app_name">Travelmantics</string>
    <string name="travelmantics">Travelmantics</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="or">or</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="insert_new_deal">Insert new deal</string>
    <string name="sign_out">Sign out</string>
    <string name="save_deal">Save deal</string>
    <string name="delete_deal">Delete deal</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
</resources>
