<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/background_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:tint="#CC000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/background_image"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>

    <androidx.appcompat.widget.AppCompatImageView
            app:srcCompat="@drawable/logo"
            android:id="@+id/logo_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="90dp"
            app:layout_constraintTop_toTopOf="@+id/background_image"/>

    <TextView
            android:text="@string/travelmantics"
            android:id="@+id/logo_text"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image"
            android:layout_marginTop="8dp"/>


    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_text"
            android:layout_marginTop="90dp"
            style="@style/edit_text_style"
            android:theme="@style/edit_text_cursor_style"/>
    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/edit_text_style"
            android:theme="@style/edit_text_cursor_style"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
            android:layout_marginTop="24dp"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:textColor="@android:color/white"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text"/>
    <TextView
            android:id="@+id/hint_text_view"
            android:text="@string/don_t_have_an_account"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_text_view"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:id="@+id/sign_up_text_view"
            android:text="@string/signup"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_height="26dp"
            app:layout_constraintStart_toEndOf="@+id/hint_text_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/hint_text_view"/>
    <View
            android:id="@+id/line_one"
            android:background="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:textColor="@android:color/white"
            android:text="@string/or"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/hint_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <View
            android:id="@+id/line_two"
            android:background="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:drawablePadding="10dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:drawableStart="@drawable/google"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>