<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/background_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:tint="#CC000000"
            android:id="@+id/register_background_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/register_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="Sign up"
            app:layout_constraintStart_toStartOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
            app:srcCompat="@drawable/logo"
            android:id="@+id/register_logo_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_tool_bar"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="40dp"/>

    <TextView
            android:text="@string/travelmantics"
            android:id="@+id/register_logo_text"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_logo_image"
            android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_email_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_logo_text"
            android:theme="@style/edit_text_cursor_style"
            android:layout_marginTop="90dp"
            style="@style/edit_text_style"/>
    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_password_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/edit_text_style"
            android:theme="@style/edit_text_cursor_style"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/register_email_edit_text"
            android:layout_marginTop="24dp"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirm_password_edit_text"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/edit_text_cursor_style"
            style="@style/edit_text_style"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/register_password_edit_text"
            android:layout_marginTop="24dp"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:textColor="@android:color/white"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>