<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detail_activity_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">


    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/deal_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/upload"
            android:layout_width="0dp"
            android:tint="#88000000"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/deal_title"
            android:text="Travel to parice you not forget"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/deal_image"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/favorit_image_view"/>
    <androidx.appcompat.widget.AppCompatImageView
            app:srcCompat="@drawable/favorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@+id/deal_image"
            app:layout_constraintBottom_toBottomOf="@+id/deal_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:id="@+id/favorit_image_view"/>
    <TextView
            android:id="@+id/deal_description"
            android:textSize="16sp"
            android:text="*Savings based on all vacation package bookings with Flight + Hotel on Expedia.com from January through December 2017, as compared to price of the same components booked separately. Savings will vary based on origin/destination, length of trip, stay dates and selected travel supplier(s). Savings not available on all packages. For Free Flight or 100% Off Flight deals, package savings is greater than or equal to the current cost of one component, when both are priced separately."
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/favorit_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:id="@+id/deal_price"
            android:layout_width="wrap_content"
            android:text="80000$"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deal_description"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_button"
            android:src="@drawable/ic_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/deal_image"
            app:layout_constraintBottom_toBottomOf="@+id/deal_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:hint="@string/title"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/upload_button"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/price_edit_text"
            app:layout_constraintVertical_chainStyle="packed"/>
    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/price_edit_text"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:hint="@string/price"
            android:padding="10dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title_edit_text"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/description_edit_text"/>
    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:hint="@string/description"
            android:gravity="start"
            android:padding="10dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/price_edit_text"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>